tests/unknown_props_in_conditionals/cycle2.js
// @flow

import {o} from "./cycle1";

if (o.q) {} // error: o.q does not exist

export const o_loop = o;
